Fix alignment of footer header on small screens

--- a/style.css
+++ b/style.css
@@ -115,6 +115,10 @@ footer .wrapper {
     flex-direction: column;
 }
 
+footer h1 {
+    text-align: center;
+}
+
 footer ul {
     display: flex;
     gap: 1rem;
